[metadata]
name = overlap_residence
version = 0.0.0a1
author = David Wu
author_email = david.wu1@monash.edu
description = Patient Ward Stay Overlap Parser
url = https://github.com/dwu0042/overlap_residence
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    networkx >= 3.0

[options.extras_require]
test = pytest